five separate lists. This will allow services to be grouped together,
according to when they should be run.

Changed the default time and date labels to use locale dependent formatting.
The defaults should now work in most locales, provided you set the
environment variable LANG before running weewx.

Now caches font handles in order to work around a memory leak in PIL.


2.5.1 12/30/13

Added UV plots to the templates. They will be shown automatically if you
have any UV data.

Fixed bug when reading cooling_base option.

Default to sane behavior if skin does not define Labels.

Fixed bug in setting of CheetahGenerator options.

Fixed qsf and qpf summary values in forecast module.

Fixed handling of empty sky cover fields in WU forecasts.

Forecast module now considers the fctcode, condition, and wx fields for
precipitation and obstructions to visibility.

Added options to forecast module to help diagnose parsing failures and new
forecast formats.

Added retries when saving forecast to database and when reading from database.

Fixes to the Fine Offset driver to eliminate spikes caused by reading from
memory before the pointer had been updated (not the same thing as an unstable
read).

Added driver for LaCrosse 2300 series of weather stations.

Added driver for Hideki TE923 series of weather stations.


2.5.0 10/29/13

Introduced a new architecture that makes it easier to define search
list extensions. The old architecture should be 100% backwards compatible.

Added station registry service. This allows weewx to optionally
"phone home" and put your station location on a map.

Added a forecast service and reporting options.  The forecast service
can generate Zambretti weather or XTide tide forecasts, or it can download
Weather Underground or US National Weather Service weather forecasts.  These
data can then be displayed in reports using the Cheetah template engine.  The
forecast service is disabled by default.
